vlib/v/checker/tests/incorrect_name_sum_type.out
vlib/v/checker/tests/incorrect_name_sum_type.v:1:1: error: sum type `integer` must begin with capital letter
    1 | type integer = i8 | i16 | int | i64
      | ~~~~~~~~~~~~