vlib/v/checker/tests/incorrect_name_sum_type.vv
type integer = i8 | i16 | int | i64
